funcionalidade para valores default

--- a/templates/block/banner.html
+++ b/templates/block/banner.html
@@ -8,8 +8,8 @@
                                                   <td width="{{ margin-width }}">&nbsp;</td>
                                                   <td width="{{ width }}" height="{{ height }}">                                                    
                                                     <a href="{{ link }}" target="_blank" Rilt="{{ rilt }}">
-			                                             <img src="{{ imageDir }}{{ image }}" width="573" height="{{ height }}" alt="{{ alt }}" border="0" style="display:block;">
-			                                          </a>
+    			                                             <img src="{{ imageDir }}{{ image }}" width="{{ width }}" height="{{ height }}" alt="{{ alt }}" border="0" style="display:block;">
+    			                                          </a>
                                                   </td>
                                                   <td width="{{ margin-width }}">&nbsp;</td>
                                                 </tr>
