--- a/templates/block/banner_sem_link.html
+++ b/templates/block/banner_sem_link.html
@@ -4,12 +4,12 @@
                                           <tr>
                                             <td>    
                                               <table width="573" cellpadding="0" cellspacing="0" border="0">
-                                                <tr>                                                  
-                                                  <td width="573" height="{{ height }}">                                                    
-                                                    <a href="{{ link }}" target="_blank" Rilt="{{ rilt }}">
-    			                                        <img src="{{ imageDir }}{{ image }}" width="573" height="{{ height }}" alt="{{ alt }}" border="0" style="display:block;">
-    			                                    </a>
-                                                  </td>                                                  
+                                                <tr>
+                                                  <td width="{{ margin-width }}">&nbsp;</td>
+                                                  <td width="{{ width }}" height="{{ height }}">
+    			                                          <img src="{{ imageDir }}{{ image }}" width="{{ width }}" height="{{ height }}" alt="{{ alt }}" border="0" style="display:block;">
+                                                  </td>
+                                                  <td width="{{ margin-width }}">&nbsp;</td>
                                                 </tr>
                                               </table>
                                             </td>
