--- a/templates/block/texto_logo.html
+++ b/templates/block/texto_logo.html
@@ -1,12 +1,12 @@
 <tr>
                                        <td width="573" align="left" valign="top">
-                                          <table width="573" cellpadding="0" cellspacing="0" border="0"  bgcolor="#ffffff">
+                                          <table width="573" cellpadding="0" cellspacing="0" border="0" bgcolor="{{ background-color }}">
                                              <tr>
-                                                <td width="30" style="font-size: 0px;">&nbsp;</td>
-                                                <td width="513" align="left" valign="top">
-                                                   <table>
+                                                <td width="{{ margin-width }}" style="font-size: 0px;">&nbsp;</td>
+                                                <td width="{{ width }}" align="left" valign="top">
+                                                   <table cellpadding="0" cellspacing="0" border="0">
                                                       <tr>
-                                                         <td width="{{ text-width }}" style="font-family: Arial, Tahoma, Helvetica, sans-serif; color: #5c5c5c; font-size: 14px; mso-line-height-rule: exactly; line-height: 20px;">
+                                                         <td width="{{ text-width }}" style="font-family: Arial, Tahoma, Helvetica, sans-serif; color: {{ text-color }}; font-size: 14px; mso-line-height-rule: exactly; line-height: 20px;">
                                                             <span style="font-size: 14px; line-height: 20px;">
                                                                {{ text }}
                                                             </span>
@@ -18,7 +18,7 @@
                                                       </tr>
                                                    </table>
                                                 </td>
-                                                <td width="30" style="font-size: 0px;">&nbsp;</td>
+                                                <td width="{{ margin-width }}" style="font-size: 0px;">&nbsp;</td>
                                              </tr>
                                           </table>
                                        </td>
